RESOLVED FIXED115095
[EFL][WK2] WebKitTestRunner failures due to IconDatabase assertions
https://bugs.webkit.org/show_bug.cgi?id=115095
Summary [EFL][WK2] WebKitTestRunner failures due to IconDatabase assertions
Chris Dumez
Reported 2013-04-24 01:03:47 PDT
We recently started hitting assertion in the IconDatabase code such as this one: crash log for WebKitTestRunner (pid 1194): STDOUT: <empty> STDERR: ERROR: Preparing statement DELETE FROM PageURL WHERE url = (?); failed STDERR: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/Source/WebCore/loader/icon/IconDatabase.cpp(1881) : void WebCore::readySQLiteStatement(WTF::OwnPtr<WebCore::SQLiteStatement>&, WebCore::SQLiteDatabase&, const WTF::String&) STDERR: ASSERTION FAILED: m_isPrepared STDERR: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/Source/WebCore/platform/sql/SQLiteStatement.cpp(198) : int WebCore::SQLiteStatement::bindText(int, const WTF::String&) STDERR: 1 0x7f7546224025 WebCore::SQLiteStatement::bindText(int, WTF::String const&) STDERR: 2 0x7f7545fc99c1 WebCore::IconDatabase::removePageURLFromSQLDatabase(WTF::String const&) STDERR: 3 0x7f7545fc884b WebCore::IconDatabase::writeToDatabase() STDERR: 4 0x7f7545fc7332 WebCore::IconDatabase::syncThreadMainLoop() STDERR: 5 0x7f7545fc5978 WebCore::IconDatabase::iconDatabaseSyncThread() STDERR: 6 0x7f7545fc55dc WebCore::IconDatabase::iconDatabaseSyncThreadStart(void*) STDERR: 7 0x7f754a4fc67d STDERR: 8 0x7f754a51f1a2 STDERR: 9 0x7f7540f00e9a STDERR: 10 0x7f7540717cbd clone STDERR: LEAK: 18 CachedResource It started happening after <http://trac.webkit.org/changeset/148886>.
Attachments
Patch (3.01 KB, patch)
2013-04-24 01:09 PDT, Chris Dumez
no flags
Patch (3.01 KB, patch)
2013-04-24 01:12 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2013-04-24 01:09:16 PDT
Chris Dumez
Comment 2 2013-04-24 01:12:12 PDT
Created attachment 199403 [details] Patch Fix typo in Changelog.
Chris Dumez
Comment 3 2013-04-24 01:17:08 PDT
This started happening <http://trac.webkit.org/changeset/148886> because the EFL port now properly uses the given diskCacheDirectory WebProcess parameter which is the DumpRenderTree temporary folder in the WKTR case. Before that, we were ignoring the given cache path and using the default one for the platform. Therefore, the libsoup cache was in a different folder than the rest.
Chris Dumez
Comment 4 2013-04-24 01:27:09 PDT
FYI, We have about 80 crashes on the debug build bot due to this issue: http://build.webkit.org/results/EFL%20Linux%2064-bit%20Debug%20WK2/r149016%20(11666)/results.html
Antonio Gomes
Comment 5 2013-04-24 04:20:50 PDT
Comment on attachment 199403 [details] Patch It looks reasonable. Is it a new problem, though?
Chris Dumez
Comment 6 2013-04-24 04:31:23 PDT
(In reply to comment #5) > (From update of attachment 199403 [details]) > It looks reasonable. Is it a new problem, though? It started happening because of the fix in: <http://trac.webkit.org/changeset/148886> We did not see the problem before the fix because EFL was not using the path provided by WKTR for the cache. Please see my earlier comment: https://bugs.webkit.org/show_bug.cgi?id=115095#c3
WebKit Commit Bot
Comment 7 2013-04-24 05:00:32 PDT
Comment on attachment 199403 [details] Patch Clearing flags on attachment: 199403 Committed r149027: <http://trac.webkit.org/changeset/149027>
WebKit Commit Bot
Comment 8 2013-04-24 05:00:40 PDT
All reviewed patches have been landed. Closing bug.
Benjamin Poulain
Comment 9 2013-04-28 20:57:40 PDT
Please don't mark patches as "EFL" if they are not EFL specific. That makes it harder to track changes.
Chris Dumez
Comment 10 2013-04-29 23:56:40 PDT
(In reply to comment #9) > Please don't mark patches as "EFL" if they are not EFL specific. That makes it harder to track changes. Sorry about that. The bug was EFL specific but the patch is indeed "generic", I forgot to update the tags.
Note You need to log in before you can comment on or make changes to this bug.