[EFL][WK2] WebKitTestRunner failures due to IconDatabase assertions https://bugs.webkit.org/show_bug.cgi?id=115095

Reviewed by Antonio Gomes.

Use different subfolders under DumpRenderTree Temp folder for every
functionality (icon database, cache, localstorage, ...). This makes
sure there is no conflict between the functionalities.

In EFL's case, libsoup cache was causing problems for the icon
database if sharing the same folder.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::initialize):


Canonical link: https://commits.webkit.org/133526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149027 268f45cc-cd09-0410-ab3c-d52691b4dbfc